@@ -1,8 +1,12 @@
+2003-12-09  Alexander Dupuy  <dupuy@sysdetect.com>
+
+	* lib/b_ioh.c (bk_ioh_shutdown): avoid idiocy trying to turn off reads
+
 2003-12-08  James Tanis  <jtt@pearl.sysdetect.com>
 
 	* xml/b_search.c (bkxml_check_next_node_name): Function to check
-	the name of the next element node (replaces many uses of
-	bkxml_nodesearch() while requiring "dtd correctness")
+	the name of the next element node [replaces many uses of
+	bkxml_nodesearch() while requiring "dtd correctness"]
 
 2003-12-05  Alexander Dupuy  <dupuy@sysdetect.com>
 
